--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -1,4 +1,4 @@
-.users-container{
+.users-container {
     margin-top: 100px;
 }
 
@@ -14,7 +14,7 @@
     background: rgb(1, 1, 99);
 }
 
-.tablerow-user{
+.tablerow-user {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -149,35 +149,35 @@
     display: block;
 }
 
-.admin-header-container-user .user-addicon{
+.admin-header-container-user .user-addicon {
     font-size: 25px;
     color: white;
     cursor: pointer;
 }
 
-.edit-btn .useredit-icon{
+.edit-btn .useredit-icon {
     font-size: 25px;
     color: green;
     cursor: pointer;
 }
 
-.edit-btn .userdelete-icon{
+.edit-btn .userdelete-icon {
     font-size: 25px;
     color: darkred;
     cursor: pointer;
 }
 
-.table-container{
+.table-container {
     height: 70vh;
     overflow-y: auto;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
 
-.users-spinner{
-    border: 4px solid  #f3f3f3;
+.users-spinner {
+    border: 4px solid #f3f3f3;
     border-top: 4px solid #065c96;
     width: 40px;
     height: 40px;
@@ -187,61 +187,87 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg);}
-    100% { transform: rotate(360deg);}
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-.user-head-search{
+.user-head-search {
     display: flex;
     gap: 15px;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
 }
 
-.user-searchbar{
+.user-search-icon {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.user-searchbar {
     display: flex;
     gap: 15px;
     align-items: center;
+    position: relative;
 }
 
-.user-search-input{
+.user-search-input {
+    opacity: 0;
     padding: 5px 0 5px 10px;
-    width: 300px;
-    border: 1px solid rgba(0, 0, 0, 0.7);
+    width: 0;
+    border: 1px solid #ccc;
+    border-radius: 50px;
+    transition: width 0.5s ease, opacity 0.5s ease;
+}
+
+.user-search-input-res {
+    padding: 5px 0 5px 10px;
+    width: 250px;
+    border: 1px solid #ccc;
     border-radius: 50px;
 }
 
-.user-search-input::placeholder{
+.expanded-user {
+    width: 300px;
+    opacity: 1;
+
+}
+
+.user-search-input::placeholder {
     color: black;
     font-size: bold;
     position: absolute;
     left: 15px;
 }
 
-.user-searchbar-res{
+.user-searchbar-res {
     display: none;
 }
 
-.users-msg{
+.users-msg {
     margin: 20px auto;
 }
 
 @media only screen and (min-width:319px) and (max-width:500px) {
-    .admin-header-user{
+    .admin-header-user {
         flex-wrap: wrap;
         display: flex;
-        flex-direction: row; 
-        gap: 5px;      
+        flex-direction: row;
+        gap: 5px;
     }
 
-    .admin-slidebar{
+    .admin-slidebar {
         display: none;
     }
 
     .admin-header-container-user {
         display: flex;
         align-items: center;
-        justify-content:space-between;
+        justify-content: space-between;
         padding: 10px;
         margin: auto;
         width: 100% !important;
@@ -250,11 +276,11 @@
 
     .upload-button1,
     .upload-button2 {
-    color: white;
-    border: none;
-    padding: 2px 6px;
-    border-radius: 5px;
-    cursor: pointer;
+        color: white;
+        border: none;
+        padding: 2px 6px;
+        border-radius: 5px;
+        cursor: pointer;
     }
 
     .upload-button1 svg,
@@ -262,7 +288,7 @@
         font-size: 20px;
     }
 
-    .userslabel-name{
+    .userslabel-name {
         font-size: 12px;
     }
 
@@ -274,7 +300,7 @@
         margin-left: 10px;
     }
 
-    .tablerow-user{
+    .tablerow-user {
         text-align: center;
         display: flex;
         justify-content: center;
@@ -282,8 +308,8 @@
         font-weight: bold;
     }
 
-    .users-table{
-        border-collapse:collapse;
+    .users-table {
+        border-collapse: collapse;
         margin: auto;
         width: 100%;
         cursor: pointer;
@@ -293,20 +319,21 @@
     .userdata-container {
         margin-left: 0% !important;
         height: 100vh;
-    }  
-
-    .admin-header-container-user .createbutton{
-        font-size: 12px;
-        color: white;
-        cursor: pointer;
     }
-    .admin-header-container-user .user-addicon{
+
+    .admin-header-container-user .createbutton {
         font-size: 12px;
         color: white;
         cursor: pointer;
     }
 
-    .users-table thead th{
+    .admin-header-container-user .user-addicon {
+        font-size: 12px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .users-table thead th {
         position: sticky;
         top: 0;
         z-index: 1;
@@ -317,13 +344,13 @@
         font-weight: 200;
         font-family: "Poppins", sans-serif;
     }
-    
+
     .users-table tbody td {
         padding: 5px 0 5px 0;
         border-bottom: 1px solid black;
     }
-    
-    .users-table th{
+
+    .users-table th {
         padding: 8px;
         font-size: 12px;
         text-transform: uppercase;
@@ -340,12 +367,12 @@
         border: none;
         padding: 5px;
     }
-    
-    .users-table tbody tr:hover{
-        background:  rgb(221, 220, 220);
+
+    .users-table tbody tr:hover {
+        background: rgb(221, 220, 220);
     }
-    
-    .table-container{
+
+    .table-container {
         height: fit-content;
         max-height: 70vh;
         border: 1px solid black;
@@ -353,26 +380,29 @@
         margin: auto;
         overflow-y: auto;
     }
-    
-    .delete-btn .userdelete-icon{
+
+    .delete-btn .userdelete-icon {
         font-size: 20px;
         color: darkred;
         cursor: pointer;
     }
 
-   .edit-btn .useredit-icon{
+    .edit-btn .useredit-icon {
         font-size: 20px;
         color: green;
         cursor: pointer;
     }
-    .users-spinner{
+
+    .users-spinner {
         margin: auto;
     }
-    .user-searchbar-res{
+
+    .user-searchbar-res {
         display: block;
         text-align: center;
     }
-    .user-searchbar{
+
+    .user-searchbar {
         display: none;
     }
 }
@@ -384,22 +414,23 @@
         justify-content: flex-end;
         gap: 8px;
     }
-    .admin-slidebar{
+
+    .admin-slidebar {
         display: none;
     }
 
     .admin-header-container-user {
         display: flex;
         align-items: center;
-        justify-content:space-between;
+        justify-content: space-between;
         padding: 10px;
         margin: auto;
         width: 100% !important;
         margin-top: 15px;
     }
 
-    .users-table{
-        border-collapse:collapse;
+    .users-table {
+        border-collapse: collapse;
         margin: auto;
         width: 100%;
         cursor: pointer;
@@ -409,32 +440,33 @@
     .userdata-container {
         margin-left: 0% !important;
         height: 100vh;
-    }  
+    }
 
-    .admin-header-container-user .createbutton{
+    .admin-header-container-user .createbutton {
         font-size: 14px;
         color: white;
         cursor: pointer;
     }
-    .admin-header-container-user .user-addicon{
+
+    .admin-header-container-user .user-addicon {
         font-size: 20px;
         color: white;
         cursor: pointer;
     }
 
-    .users-table thead th{
+    .users-table thead th {
         position: sticky;
         top: 0;
         z-index: 1;
     }
-    
-    .users-table td{
+
+    .users-table td {
         font-size: 14px;
         font-weight: 200;
-        font-family: "Poppins",sans-serif;
+        font-family: "Poppins", sans-serif;
     }
-    
-    .users-table th{
+
+    .users-table th {
         padding: 8px;
         font-size: 12px;
         text-transform: uppercase;
@@ -443,25 +475,25 @@
         color: white;
         border-bottom: 1px solid gainsboro;
     }
-    
-    .users-table tbody td{
+
+    .users-table tbody td {
         padding: 5px 0 5px 0;
         border-bottom: 1px solid black;
     }
-    
-    .users-table tbody tr:hover{
-        background:  rgb(221, 220, 220);
+
+    .users-table tbody tr:hover {
+        background: rgb(221, 220, 220);
     }
-    
-    .tablerow-user{
+
+    .tablerow-user {
         text-align: center;
         display: flex;
         justify-content: center;
         font-size: 17px;
         font-weight: bold;
     }
-    
-    .table-container{
+
+    .table-container {
         height: fit-content;
         max-height: 70vh;
         border: 1px solid black;
@@ -469,66 +501,72 @@
         margin: auto;
         overflow-y: auto;
     }
-    
-    .delete-btn .userdelete-icon{
+
+    .delete-btn .userdelete-icon {
         font-size: 20px;
         color: darkred;
         cursor: pointer;
     }
 
-    .edit-btn .useredit-icon{
+    .edit-btn .useredit-icon {
         font-size: 20px;
         color: green;
         cursor: pointer;
     }
-    .users-spinner{
+
+    .users-spinner {
         margin: auto;
     }
-    .user-searchbar-res{
+
+    .user-searchbar-res {
         display: block;
         text-align: center;
     }
-    .user-searchbar{
+
+    .user-searchbar {
         display: none;
     }
-    
+
 }
 
 @media only screen and (max-width:768px) {
-    .admin-slidebar{
-       display: none;
-   }
+    .admin-slidebar {
+        display: none;
+    }
 }
 
 @media only screen and (min-width:500.11px) and (max-width:768px) {
-    .admin-header-container-user{
+    .admin-header-container-user {
         margin-top: 20px;
     }
 
 }
 
 @media only screen and (min-width:769px) and (max-width:1024px) {
-    .users-table tbody td{
+    .users-table tbody td {
         padding: 10px;
     }
-    .user-searchbar-res{
+
+    .user-searchbar-res {
         display: block;
         text-align: center;
     }
-    .user-searchbar{
+
+    .user-searchbar {
         display: none;
     }
 }
 
-@media only screen and (min-width:769px) and (max-width:1009px){
-    .tablerow-user{
+@media only screen and (min-width:769px) and (max-width:1009px) {
+    .tablerow-user {
         text-align: center;
         display: flex;
         justify-content: center;
         font-size: 17px;
         font-weight: bold;
     }
-    .users-table th{
+
+    .users-table th {
         padding: 8px;
         font-size: 14px;
         text-transform: uppercase;
@@ -537,30 +575,33 @@
         color: white;
         border-bottom: 1px solid gainsboro;
     }
-    .users-table tbody td{
+
+    .users-table tbody td {
         padding: 4px;
     }
-    .edit-btn .useredit-icon{
+
+    .edit-btn .useredit-icon {
         font-size: 19px;
         color: green;
         cursor: pointer;
     }
-    
-    .delete-btn .userdelete-icon{
+
+    .delete-btn .userdelete-icon {
         font-size: 19px;
         color: darkred;
         cursor: pointer;
     }
-    
+
 }
 
 @media only screen and (min-width:1025px) and (max-width:1113px) {
-    .users-table td{
+    .users-table td {
         font-size: 14px;
         font-weight: 200;
-        font-family: "Poppins",sans-serif;
+        font-family: "Poppins", sans-serif;
     }
-    .users-table tbody td{
+
+    .users-table tbody td {
         padding: 3px;
     }
 }
