--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Dialogbox/Detailspopup.css
@@ -1,4 +1,4 @@
-.create-overlay{
+.create-overlay-admin{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -9,18 +9,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 15px;
 }
 
-.create-content{
+.create-content-admin{
     width: fit-content;
     height: fit-content;
+    overflow-y: scroll;
     background: white;
     border-radius: 15px;
     position: relative;
     padding: 20px;
 }
 
-.btn-create{
+.btn-create-admin{
     position: absolute;
     top: 10px;
     right: 10px;
@@ -30,29 +32,3 @@
     cursor: pointer;
 }
 
-@media only screen and (min-width:319px) and (max-width:400px){
-    .create-content{
-       width: 80%;
-    }
-}
-
-/*@media only screen and (min-width:401px) and (max-width:500px){
-    .create-content{
-        width: 60%;
-        height: 75%;
-    }
-}
-
-@media only screen and (min-width:501px) and (max-width:700px){
-    .create-content{
-        width: 55%;
-        height: 75%;
-    }
-}
-
-@media only screen and (min-width:701px) and (max-width:1024px){
-    .create-content{
-        width: 45%;
-        height: 75%;
-    }
-} */
