--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/UpdateDialog.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Dialogbox/UpdateDialog.css
@@ -1,4 +1,4 @@
-.update-overlay-user{
+.update-overlay-user {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -12,7 +12,7 @@
     padding: 15px;
 }
 
-.update-content-user{
+.update-content-user {
     width: 50%;
     height: 80vh;
     overflow-y: scroll;
@@ -22,7 +22,7 @@
     padding: 20px;
 }
 
-.btn-update-user{
+.btn-update-user {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -32,8 +32,14 @@
     cursor: pointer;
 }
 
-@media only screen and (min-width:320px) and (max-width:780) {
-    .update-content-user{
-        width: 90%;
+@media only screen and (min-width:319px) and (max-width:1000px){
+    .update-content-user {
+        width: fit-content;
+        height: 80vh;
+        overflow-y: scroll;
+        background: white;
+        border-radius: 15px;
+        position: relative;
+        padding: 20px;
     }
 }
