--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -63,9 +63,12 @@
 
 .payslip-design {
   height:100vh;
-   padding: 30px 15px;
+   /* padding: 30px 15px;
    max-width: 1200px;
-   margin: auto;
+   margin: auto; */
+   display: flex;
+   justify-content:center ;
+   align-items: center;
    font-family: 'Segoe UI', sans-serif;
    margin-top: -100px;
  }
@@ -87,14 +90,14 @@
  
 
  .payslip-field {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   background-color:rgb(239, 238, 238);
   border-radius: 16px;
   padding: 20px 24px;
-  margin: 20px auto;
+  /* margin: 20px auto; */
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25); /* Deeper shadow */
-  gap: 12px;
+  /* gap: 12px; */
   width: 100%;
   max-width: 420px;
   border: 1px solid #e0e0e0;
@@ -487,19 +490,29 @@
     }
      .payslip-field {
       border-radius: 12px;
-      padding: 30px;
-      width: 500px;
-      margin: 0 auto;
+      padding: 5px;
+      width: fit-content;
+      /* margin: 0 auto; */
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
-      gap: 20px;
-      margin-top: 60px;
-      margin-bottom: 80px;
+      /* gap: 20px; */
+      /* margin-top: 60px;
+      margin-bottom: 80px; */
     }
     
   .input-fields label {
       font-weight: 600;
       margin-bottom: 6px;
       color: #333;
+      padding: 13px !important;
+    }
+    .input-fields{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .field-content{
+      display: flex;
+      justify-content: center;
+      padding: 10px;
     }
     
     .payslipinput {
@@ -701,14 +714,14 @@
    
    }
    @media screen and (min-width:772px) and (max-width:1025px){
-    payslip-design {
+    /* .payslip-design {
       height: 60vh;
        padding: 30px 15px;
        max-width: 1200px;
        margin: auto;
        font-family: 'Segoe UI', sans-serif;
        margin-bottom: 50px;
-     }
+     } */
      
      .portal {
        text-align: center;
@@ -719,20 +732,20 @@
      }
      
     
-     .payslip-field {
+     /* .payslip-field {
       display: flex;
       flex-direction: column;
       background-color:rgb(239, 238, 238);
       border-radius: 16px;
       padding: 20px 24px;
       margin: 20px auto;
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25); /* Deeper shadow */
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25); 
       gap: 12px;
       width: 100%;
       max-width: 420px;
       border: 1px solid #e0e0e0;
       transition: box-shadow 0.3s ease, transform 0.2s ease;
-    }
+    } */
     
      
     .input-fields label {
@@ -991,14 +1004,14 @@
     }
   }
   @media screen and (min-width:432px) and (max-width:770px){
-    payslip-design {
+    /* .payslip-design {
       height: 60vh;
        padding: 30px 15px;
        max-width: 1200px;
        margin: auto;
        font-family: 'Segoe UI', sans-serif;
        margin-bottom: 50px;
-     }
+     } */
      
      .portal {
        text-align: center;
@@ -1009,20 +1022,20 @@
      }
      
     
-     .payslip-field {
+     /* .payslip-field {
       display: flex;
       flex-direction: column;
       background-color:rgb(239, 238, 238);
       border-radius: 16px;
       padding: 20px 24px;
       margin: 20px auto;
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25); /* Deeper shadow */
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25); 
       gap: 12px;
       width: 100%;
       max-width: 420px;
       border: 1px solid #e0e0e0;
       transition: box-shadow 0.3s ease, transform 0.2s ease;
-    }
+    } */
     
      
     .input-fields label {
@@ -1279,4 +1292,9 @@
     {
       color:  #2c3e50; 
     }
+  }
+
+  .field-content{
+    display: flex;
+    justify-content: center;
   }
