--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -52,6 +52,11 @@
   cursor: pointer;
 }
 
+.dashboard-icon{
+  /* font-family: "Poppins", sans-serif; */
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .toggledashboard-icons {
   font-size: 25px;
   color: rgba(0, 0, 0, 0.741);
@@ -161,6 +166,15 @@
   display: none;
 }
 
+.company-logo-header{
+  position: absolute;
+  left: 10px;
+  top: 15px;
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
+}
+
 .userheader {
   letter-spacing: 1px;
   color: goldenrod;
@@ -168,6 +182,16 @@
   font-size: 1.5rem;
   position: absolute;
   left: 10px;
+  top: 15px;
+}
+
+.userheader-toggle{
+  letter-spacing: 1px;
+  color: goldenrod;
+  font-variant: small-caps;
+  font-size: 1.5rem;
+  position: absolute;
+  left: 70px;
   top: 15px;
 }
 
