--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -1,22 +1,38 @@
-.login-container{
-    background-image: url('../../../public/bg-2.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height:100vh;
-    width:100vw
+.login-container {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    z-index: 1;
+    border: none;
 }
+.login-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url('../../../public/insurance2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(8px);
+    z-index: -1;
+}
+
 
 .login-btn{
     margin: auto;
     display: block;
     padding: 10px;
     width: 30%;
-    background-color: darkblue;
+    background-color: teal;
     color: white;
 }
 
 .login-btn:hover{
-    background-color:royalblue;
+    background-color:#2caaa9;
     color: white;
 }
 
@@ -28,7 +44,7 @@
 }
 
 .form-data{
-    border: 1px solid black;
+  
     border-radius: 20px;
     padding: 30px;
     background-color:rgba(255, 255, 255, 0.3);
@@ -52,18 +68,35 @@
 
 .button-container .button-group.active{
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, teal 35%, rgb(132, 197, 197) 100%);
     color: white;
 }
 .form-control-login {
+    all: unset;
     width: 100%;
-    padding: 8px 11px;
-    font-size: 15px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background-color: rgba(255, 255, 255, 0.9);
-    transition: border 0.3s ease, box-shadow 0.3s ease;
-  }
+    padding: 10px 5px;
+    font-size: 16px;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    border-bottom: 1.5px solid white;
+    outline: none;
+}
+
+.form-control-login::placeholder {
+    color: #ccc;
+}
+
+.form-control-login:focus {
+    border-bottom: 1.5px solid teal;
+
+}
+
+
+.form-control-login:not(:placeholder-shown) {
+    border-bottom: none;
+}
+
 
 
 @media screen and (max-width: 1440px) {
@@ -74,11 +107,7 @@
     .button-container .button-group {
         width: 180px;
     }
-    /* .form-control-login
-    {
-        height: 35px;
-        font-size: 25px;
-    } */
+   
    
 }
 
