--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -1,11 +1,10 @@
 .admin-slidebar {
-  background: rgb(239, 238, 238);
   height: 100vh;
-  width: 15%;
+  width: 20%;
   position: fixed;
   left: 0;
   top: 0;
-  /* box-shadow: 1px 5px 10px  rgba(0, 0, 0, 0.5); */
+  border-right: 3px solid #eeeeee;
 }
 
 .toggle-slidebar{
@@ -15,13 +14,12 @@
   position: fixed;
   left: 0;
   top: 0;
-  /* box-shadow: 1px 3px 10px  rgba(0, 0, 0, 0.5); */
   transition: width 0.3s ease;
   overflow: hidden;
 }
 
 .userdata-container {
-  margin-left: 15%;
+  margin-left: 20%;
   height: 100vh;
 }
 
@@ -70,19 +68,19 @@
 }
 
 .user-profile {
-  background-color: rgb(239, 238, 238);
+  /* background-color: rgb(239, 238, 238); */
   top: 0;
   right: 0;
   display: flex;
   justify-content: flex-end;
-  width: 85%;
+  width: 80%;
   padding: 20px;
   gap: 10px;
   position: fixed;
 }
 
 .toggle-profile {
-  background-color: rgb(239, 238, 238);
+  /* background-color: rgb(239, 238, 238); */
   top: 0;
   right: 0;
   display: flex;
