--- a/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/CustomerDetails/Adminpage.css
@@ -1,5 +1,5 @@
 .admin-container {
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 .admin-btn {
@@ -62,12 +62,16 @@
 
 .admin-header-container {
     display: flex;
-    align-items: center !important;
-    justify-content: space-between;
+    /* align-items: center !important; */
+    /* justify-content: space-between; */
     /* padding: 50px; */
+    justify-content:flex-end ;
     margin: auto;
-    padding: 10px;
-    margin-top: 60px;
+    padding: 20px;
+    /* margin-top: 60px; */
+    /* border-top: 1px solid #aaaaaa; */
+    border-bottom: 1px solid #aaaaaa;
+    background-color: rgba(128,128,128,0.1);
 }
 
 .admin-header {
