--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -1,7 +1,7 @@
 .admin-slidebar {
   padding: 10px;
   height: 100vh;
-  width: 20%;
+  width: 17%;
   position: fixed;
   left: 0;
   top: 0;
@@ -9,18 +9,18 @@
 }
 
 .toggle-slidebar{
-  background: rgb(239, 238, 238);
   height: 100vh;
   width: 5%;
   position: fixed;
   left: 0;
   top: 0;
   transition: width 0.3s ease;
+  border-right: 1px solid #aaaaaa;
   overflow: hidden;
 }
 
 .userdata-container {
-  margin-left: 20%;
+  margin-left: 17%;
   height: 100vh;
 }
 
@@ -38,26 +38,33 @@
   border-bottom: 1px solid #aaaaaa;
 }
 
+.user-list-down{
+  list-style: none;
+  padding: 4px 3px 15px 3px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .list-style{
   list-style: none;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 12px;
   cursor: pointer;
+  transition: all 0.5s linear;
 }
 
-.list-style:hover{
-  border: 1px solid purple;
-  background-color: rgba(128,0,128,0.1);
-}
-
-.list-style:hover .dashboardicons,
-.list-style:hover .dashboard-icon{
-  color: purple;
+.active .dashboardicons,
+.active .dashboard-icon{
+  /* color: purple; */
+  color: navy;
 }
 
 .active{
-  border: 1px solid purple;
-  background-color: rgba(128,0,128,0.1);
+  /* border: 1px solid purple; */
+  /* background-color: rgba(128,0,128,0.1); */
+  background-color: rgba(0,0,128,0.1);
+  border: 1px solid navy;
 }
 
 .userdata-btn{
@@ -73,18 +80,10 @@
   color: #605f5f;
 }
 
-/* .dashboardicons:hover{
-  color: purple;
-} */
-
 .dashboard-icon{
   font-family: "Poppins", sans-serif;
   color: #605f5f;
 }
-
-/* .dashboard-icon:hover{
-  color: purple;
-} */
 
 .toggledashboard-icons {
   font-size: 25px;
@@ -98,7 +97,6 @@
   padding: 15px;
   color: #707070;
   font-size: small;
-  /* font-weight: bold; */
 }
 
 .user-profile {
@@ -106,10 +104,11 @@
   right: 0;
   display: flex;
   justify-content: flex-end;
-  width: 80%;
+  width: 83%;
   padding: 20px;
   gap: 10px;
   position: fixed;
+  border-bottom: 1px solid #aaaaaa;
 }
 
 .toggle-profile {
@@ -121,23 +120,23 @@
   padding: 20px;
   gap: 10px;
   position: fixed;
+  border-bottom: 1px solid #aaaaaa;
 }
 
 .userlogout-btn {
   position: relative;
-  font-size: 20px;
   display: flex;
   align-items: center;
   cursor: pointer;
   background: none;
   border: none;
-  color: black;
 }
 
 .userlogout-btn .logo {
-  font-size: 30px;
-  color: #023265;
+  font-size: 20px;
+  color:#605f5f;
   cursor: pointer;
+  
 }
 
 .userlogout-btn .logoutbutton {
@@ -152,7 +151,9 @@
 }
 
 .user-profile .username {
-  font-size: 23px;
+  font-family: "Poppins", sans-serif;
+  color: #605f5f;
+  font-size: 20px;
 }
 
 .sidebarmenu-btn{
@@ -177,7 +178,8 @@
   background: none;
   border: none;
   transition: transform 0.5s ease-in-out;
-  transform: rotate(180deg);
+  position: relative;
+  left: 20%;
 }
 
 /* .toggledashboard-menu:hover{
@@ -207,12 +209,13 @@
 
 .userheader {
   letter-spacing: 1px;
-  color: goldenrod;
-  font-variant: small-caps;
+  color: #000;
   font-size: 1.5rem;
   position: absolute;
   left: 10px;
-  top: 15px;
+  top: 25px;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
 }
 
 .userheader-toggle{
@@ -235,14 +238,14 @@
   display: flex;
   justify-content:space-between;
   align-items: center;
-  padding: 10px;
+  padding: 11px;
   border-bottom: 1px solid #aaaaaa;
   position: relative;
 }
 
 .sidebar-companyname{
   position: absolute;
-  left: 20%;
+  left: 25%;
   font-family: "Poppins",sans-serif;
   font-weight: bold;
 }
@@ -261,6 +264,17 @@
 .userheader-res{
   display: none;
 }
+
+.sidebar-companyname-toggle{
+  display: none;
+}
+
+.settings-icon{
+  position: relative;
+  left: 90%;
+}
+
+
 
 @media only screen and (min-width:320px) and (max-width:768px) {
   .sidebarmenu-btn{
@@ -456,15 +470,15 @@
   }
 
   .toggle-slidebar{
-    width: 7%;
+    width: 5%;
   }
 
   .toggle-profile {
-    width: 93%;
+    width: 95%;
   }
 
   .toggle-container {
-    margin-left: 7%;
+    margin-left: 5%;
     height: 100vh;
   }
 }
