--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
@@ -17,7 +17,6 @@
     padding: 20px;
     font-family: 'Segoe UI', sans-serif;
     margin-top: 100px;
-    background: linear-gradient(to right, #e0eafc, #cfdef3);
     background-size: cover;
     color: #333;
   }
@@ -70,7 +69,7 @@
     max-width: 600px;
     margin: auto;
     border-radius: 20px;
-  background-color: white;
+    background-color: white;
     backdrop-filter: blur(12px);
   
     text-align: center;
@@ -132,12 +131,10 @@
     margin-left: 400px;
     margin-top: 80px;
     width: 580px;
-    height:400px;
+    height:300px;
     background-color:white;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
+     z-index: 10;
     border-radius: 15px;
   }
   
@@ -182,11 +179,6 @@
   }
   
 
-  .employee-attend {
-    display: flex;
-    flex-direction: row;
-    gap: 4px;
-  }
   .text-box
   {
     height: 70px;
@@ -194,4 +186,43 @@
   .name
   {
     color: teal;
+  }
+  @media only screen and (min-width:320px) and (max-width:426px) 
+  {
+    .employee-attendance {
+      display: flex;
+      flex-direction: column;
+     }
+     
+  .reason-modal {
+    position: fixed;
+    margin-left:3px;
+    margin-top: 120px;
+    width: 320px;
+    height:300px;
+   }
+  .attendance-present,
+  .attendance-absent {
+    padding: 10px 26px;
+    font-size: 15px;
+    margin: 4px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    width: 100px;
+   
+  }
+
+  }
+  @media only screen and (min-width:426.1px) and (max-width:768px) 
+  {
+    .reason-modal {
+      position: fixed;
+      margin-left: 180px;
+      margin-top: 80px;
+      width: 600px;
+      height:300px;
+      border-radius: 15px;
+    }
   }
