--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/Updatedata.css
@@ -1,5 +1,46 @@
-.userupdate-btn{
+.userupdate-btn {
   display: block;
   margin: auto;
   color: white;
+}
+
+.slider-switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 25px;
+}
+
+.slider-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0; left: 0;
+  right: 0; bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px; width: 18px;
+  left: 3px; bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: green;
+}
+
+input:checked + .slider:before {
+  transform: translateX(22px);
 }
