--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Updateform/userattendance.css
@@ -19,6 +19,7 @@
     margin-top: 100px;
     background-size: cover;
     color: #333;
+  
   }
   
   
@@ -71,7 +72,7 @@
     border-radius: 20px;
     background-color: white;
     backdrop-filter: blur(12px);
-  
+    background-color: rgb(73, 200, 200);
     text-align: center;
     margin-bottom: 500px;
   }
@@ -82,10 +83,7 @@
     margin-bottom: 15px;
   }
   
-  .attend-portel h2 span {
-    font-weight: 600;
-    color: #1a73e8;
-  }
+ 
   
   .attend-portel h4 {
     font-size: 20px;
@@ -185,8 +183,18 @@
   }
   .name
   {
-    color: teal;
+    color:navy;
+    font-weight: 600;
   }
+  .employee-attend
+  {
+    border:1px solid teal;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: rgb(171, 221, 221);
+    margin-top: 100px;
+  }
+
   @media only screen and (min-width:320px) and (max-width:426px) 
   {
     .employee-attendance {
